<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white_bule_gradient"
    android:orientation="vertical"
    android:padding="3dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/group_bgd"
                android:gravity="center_vertical"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi"
                        android:textColor="#4a4a49"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:singleLine="true"
                        android:textColor="#5d5d5d"
                        android:textSize="12sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/toggleButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        style="@style/label_m"
                        android:text="@string/label_ssid" />

                    <EditText
                        android:id="@+id/editText1"
                        style="@style/edit_text_r"
                        android:layout_weight="1"
                        android:hint="@string/pls_choose_wifi" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/choose" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/label_m"
                        android:text="@string/label_password" />

                    <EditText
                        android:id="@+id/editText2"
                        style="@style/edit_text"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:inputType="textPassword"
                        android:text="aixinxin" />

                    <TextView />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView />

                    <CheckBox
                        android:id="@+id/checkBox1"
                        style="@style/label_m"
                        android:layout_marginLeft="-4dp"
                        android:text="@string/show_passwd" />

                    <TextView />
                </TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:enabled="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/ok" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/cancel" />
                </LinearLayout>
            </TableLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                android:textColor="#5a5a69"
                android:textSize="19sp"
                android:textStyle="italic"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about" />
    </LinearLayout>

</LinearLayout>