<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:background="@drawable/white_bule_gradient"
	    android:gravity="center_horizontal">
		<TableLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
	   		android:layout_marginTop="10dp">
			<TableRow
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp">
			    <TextView
			        style="@style/label_m"
			        android:text="@string/label_ssid"/>
			    <EditText
			        android:id="@+id/editText1"
				    android:layout_weight="1"
			        style="@style/edit_text_r"
			        android:focusable="false"/>
			</TableRow>

			<TableRow
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content">
			    <TextView
			        style="@style/label_m"
			        android:text="@string/label_password"/>
			    <EditText
			        android:id="@+id/editText2"
				    android:layout_weight="1"
			        style="@style/edit_text"
				    android:password="true"
			        android:ellipsize="none"
			        android:focusable="true"/>
			</TableRow>

			<TableRow
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content">
			    <CheckBox
			        android:id="@+id/checkBox1"
			        style="@style/edit_text_r"
			        android:layout_marginLeft="-5dp"
				    android:text="@string/show_passwd"
				    android:layout_column="1"/>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>