<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_appbar" />

    <ImageView
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wifi" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/lineColor" />

    <EditText
        android:id="@+id/editText_hiflying_smartlinker_ssid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:enabled="false"
        android:background="@android:color/transparent"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/lineColor" />

    <EditText
        android:id="@+id/editText_hiflying_smartlinker_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/qingshurujiazhong"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/lineColor" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/iv"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_check_normal"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:text="@string/rememberPwd" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:text="@string/jinzhichi"

            />
    </RelativeLayout>


    <Button
        android:id="@+id/button_hiflying_smartlinker_start"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_btn_bg"
        android:text="@string/nextStep"
        android:textColor="@color/btnTextColor" />

</LinearLayout>